--- a/JFA.AdventureWorks/JFA.AdventureWorks.Entities/JFA.AdventureWorks.Entities.csproj
+++ b/JFA.AdventureWorks/JFA.AdventureWorks.Entities/JFA.AdventureWorks.Entities.csproj
@@ -52,248 +52,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Address.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="AddressType.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="AdventureWorks.cs">
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AdventureWorks.Entities.generated.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="AdventureWorksDBContext.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="AwBuildVersion.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="BillOfMaterial.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="BusinessEntity.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="BusinessEntityAddress.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="BusinessEntityContact.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Class1.cs" />
-    <Compile Include="ContactType.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="CountryRegion.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="CountryRegionCurrency.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="CreditCard.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Culture.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Currency.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="CurrencyRate.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Customer.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="DatabaseLog.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Department.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Document.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="EmailAddress.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Employee.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="EmployeeDepartmentHistory.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="EmployeePayHistory.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ErrorLog.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="IAdventureWorksDBContext.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Illustration.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="JobCandidate.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Location.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Password.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Person.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="PersonCreditCard.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="PersonPhone.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="PhoneNumberType.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Product.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductCategory.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductCostHistory.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductDescription.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductDocument.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductInventory.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductListPriceHistory.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductModel.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductModelIllustration.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductModelProductDescriptionCulture.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductPhoto.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductProductPhoto.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductReview.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductSubcategory.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ProductVendor.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PurchaseOrderDetail.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="PurchaseOrderHeader.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SalesOrderDetail.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SalesOrderHeader.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SalesOrderHeaderSalesReason.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SalesPerson.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SalesPersonQuotaHistory.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SalesReason.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SalesTaxRate.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SalesTerritory.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SalesTerritoryHistory.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ScrapReason.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Shift.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ShipMethod.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ShoppingCartItem.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SpecialOffer.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SpecialOfferProduct.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="StateProvince.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Store.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TransactionHistory.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TransactionHistoryArchive.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="UnitMeasure.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Vendor.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="WorkOrder.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
-    </Compile>
-    <Compile Include="WorkOrderRouting.cs">
-      <DependentUpon>AdventureWorks.tt</DependentUpon>
+      <DependentUpon>AdventureWorks.Entities.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="EF.Reverse.POCO.Core.ttinclude" />
-    <None Include="EF.Reverse.POCO.ttinclude" />
     <None Include="packages.config" />
+    <None Include="T4\EFCodeGen.ttinclude" />
+    <None Include="T4\MSSQL.ttinclude" />
+    <None Include="T4\PluralSingular.ttinclude" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AdventureWorks.tt">
+    <Content Include="AdventureWorks.Entities.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>AdventureWorks.cs</LastGenOutput>
+      <LastGenOutput>AdventureWorks.Entities.generated.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
