--- a/JFA.AdventureWorks/JFA.AdventureWorks.Web/Web.config
+++ b/JFA.AdventureWorks/JFA.AdventureWorks.Web/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-JFA.AdventureWorks.Web-20160119080156.mdf;Initial Catalog=aspnet-JFA.AdventureWorks.Web-20160119080156;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AdventureWorksDB" connectionString="data source=.;initial catalog=AdventureWorks2008;integrated security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
