--- a/JFA.AdventureWorks/JFA.AdventureWorks.Web/JFA.AdventureWorks.Web.csproj
+++ b/JFA.AdventureWorks/JFA.AdventureWorks.Web/JFA.AdventureWorks.Web.csproj
@@ -189,6 +189,18 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Codetemplates\MvcControllerEmpty\Controller.cs.t4" />
+    <Content Include="Codetemplates\MvcControllerWithActions\Controller.cs.t4" />
+    <Content Include="Codetemplates\MvcControllerWithContext\Controller.cs.t4" />
+    <Content Include="Codetemplates\MvcView\Create.cs.t4" />
+    <Content Include="Codetemplates\MvcView\Delete.cs.t4" />
+    <Content Include="Codetemplates\MvcView\Details.cs.t4" />
+    <Content Include="Codetemplates\MvcView\Edit.cs.t4" />
+    <Content Include="Codetemplates\MvcView\Empty.cs.t4" />
+    <Content Include="Codetemplates\MvcView\Imports.include.t4" />
+    <Content Include="Codetemplates\MvcView\List.cs.t4" />
+    <Content Include="Codetemplates\MvcView\ModelMetadataFunctions.cs.include.t4" />
+    <Content Include="Codetemplates\MvcView\ListWithPager.t4" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -201,7 +213,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -239,6 +253,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Codetemplates\MvcViewWithoutModel\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -258,6 +273,9 @@
       <Name>JFA.AdventureWorks.Repository</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
@@ -276,7 +294,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>51486</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:51486/</IISUrl>
+          <IISUrl>http://localhost:51487/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
