--- a/JFA.AdventureWorks/JFA.AdventureWorks.Repository/JFA.AdventureWorks.Repository.csproj
+++ b/JFA.AdventureWorks/JFA.AdventureWorks.Repository/JFA.AdventureWorks.Repository.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BaseRepository.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="IRepository.cs" />
+    <Compile Include="Paginator.cs" />
     <Compile Include="PersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
