--- a/JFA.AdventureWorks/JFA.AdventureWorks.Web/Web.config
+++ b/JFA.AdventureWorks/JFA.AdventureWorks.Web/Web.config
@@ -17,6 +17,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="Settings.PagingRowCount" value="50" />
+  
   </appSettings>
   <system.web>
     <authentication mode="None" />
